[package]
name = "fc-adapter"
version = "0.1.0"
authors = ["prz23"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialization = { branch = "sub2.0", git = "https://github.com/ABMatrix/bitcoin-rust", default-features = false }
rustc-hex = { version = "2" }
base58 = { version = "0.1" }
libsecp256k1 = { version = "0.2.2", package = "libsecp256k1"}
secp256k1 = { version = "0.15.3", package = "secp256k1"}
lazy_static = "*"
node-tss = { version = "0.0.1",  path = "../tss"}
log = "0.4.8"
lotus-api = { version = "0.1.0", git = "https://github.com/Kayryu/lotus-api"}
num-traits = { version = "0.2.11" }
futures = "0.3.1"
futures-timer = "3.0.1"
bridge = { version = "0.0.1", path = "../bridge"}
sp-runtime = { version = "2.0.0" }
sp-transaction-pool = { version = "2.0.0" }
sc-client-api = { version = "2.0.0" }
sp-core = { version = "2.0.0" }
sp-block-builder = { version = "2.0.0" }
sc-block-builder = { version = "0.8.0" }
sp-blockchain = { version = "2.0.0" }
sp-api = { version = "2.0.0" }
filecoin-bridge-runtime = { version = "2.0.0", path = "../../runtime" }
parking_lot = "0.10.0"
tokio = { version = "0.2.5", features = ["macros"] }

plum_message = { version = "0.1.0" , git = "https://github.com/prz23/plum" }
#[replace]
#"cid:0.5.0" = { git = "https://github.com/PolkaX/rust-cid", branch = "impl-cbor-and-json" }
forest_address = { git = "https://github.com/prz23/forest" ,  branch="main" }
forest_message = { git = "https://github.com/prz23/forest" ,  branch="main" }
forest_cid = { git = "https://github.com/prz23/forest" ,  branch="main" }
forest_bigint = { git = "https://github.com/prz23/forest" ,  branch="main" }
interpreter = { git = "https://github.com/prz23/forest" ,  branch="main" }

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
tag = "v0.2.6"
features = ["ec_secp256k1"]
